--- a/index.html
+++ b/index.html
@@ -8,17 +8,44 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <section>
+    <section class="top-banner">
         <div class="half-width">
         <h1>Welcome To</h1>
         <h1><span class="name-highlight">My</span> Website</h1>
         <h3>World class professional web developer</h3>
         <p>Hello, I am Md. Masum Parvej professional web developer. I am learning and mastering web development. I will not stop until I become the Web Development Hero.</p>
+        <a class="link-button" href="https://www.facebook.com/mdrmasum" target="_blank">HIRE ME</a>
         </div>
         <div class="half-width">
             <img src="images/masum1.png" alt="">
         </div>
     </section>
-
+    <section class="dream">
+        <div class="half-width">
+            <img src="images/dream.png" alt="">
+        </div>
+        <div class="half-width">
+            <h2>Dream Big</h2>
+            <h3>Become a web developer</h3>
+            <p>I already learned the basic HTML and CSS. I can build any simple website. I can even teach my grandma how to make simple website. My goal is to build 3 websites and learn advanced topics.</p>
+            <a class="resume-button" href="https://www.facebook.com/mdrmasum" target="_blank">DOWNLOAD RESUME</a>
+        </div>
+    </section>
+    <section class="experience">
+        <h2>Experiences</h2>
+        <div id="fullstack" class="half-width single">
+            <h2> Full Stack Web Developer </h2>
+            <h3 class="name-highlight">2021-Present | Pro Level Developer</h3>
+            <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function, efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called Vue JS. I even know the deployment, server and security. I will give you 100% web solution.</p>
+        </div>
+        <div id="baby" class="half-width single">
+            <h2> Baby Web Developer </h2>
+            <h3 class="name-highlight">2020-2021 | Programming Hero Learner</h3>
+            <p>They didn't offer me a job. But I made myself as a remove web developer. I made their website and showed it to them. They liked it. And uploaded the content. It was fun working at Programming Hero.</p>
+        </div>
+    </section>
+    <footer>
+        <p>© Masum Parvej 2021, all rights reserved</p>
+    </footer>
 </body>
 </html>
