--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <a class="link-button" href="https://www.facebook.com/mdrmasum" target="_blank">HIRE ME</a>
         </div>
         <div class="half-width">
-            <img src="images/masum1.png" alt="">
+            <img src="images/dream.png" alt="">
         </div>
     </section>
     <section class="dream">
